2006-08-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* test/worker.scm, test/redirectcont.scm: Fix for change of kahua.server

	* src/kahua-spvr.scm: Fix
	  - Use define-condition-type instead of define-class for definition
	    of exceptions.

	* src/kahua/server.scm: Fix bugs.
	  - Fit 302 status message to RFC2616.
	  - Use "content-type" instead of "Content-Type" for avoid error
	    of FastCGI.

	* src/kahua/persistence/fs.scm: Fix lack of (use gauche.logger).

	* src/kahua/protocol/worker, src/kahua/protocol/http: Add
	  Splitted from src/kahua-httpd.scm, and now kahua.cgi use
	  them.

	* cgi/kahua.cgi.in, src/kahua-httpd.scm: Arranged

2006-08-21  Katsutoshi Itoh <cut-sea@kahua.org>

	* add remove-keyword/keyrem into skel/proj/utility.kahua.

2006-08-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* test/httpd.scm
	  Retry if connection refused for the first time request.  This
	  is for avoiding test failure on a poor system.

2006-08-16  Katsutoshi Itoh <cut-sea@kahua.org>

	* add money-box/ tag for skel/parts-collection.kahua.

2006-08-16  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/elem.scm:
	  Define "define-basic-element" macro, and define most of tags
	  with it.  If (define-basic-element foo) define both foo/
	  and foo:.

	* src/kahua/persistence.scm:
	  Remove a unnecessary generic function.

	* src/kahua/persistence/fs.scm:
	  Print warning message if database character encoding is not
	  compatible with gauche internal character encoding.

2006-08-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/persistence.scm, src/kahua/persistence/fs.scm:
	- Now fsdb has its own character encoding in "%%character-encoding"
	  file.  If it is different with (gauche-character-encoding), do
	  conversion.
	- Now fsdb has lock file outside of database directory, and lock it
	  before open/create database.
	- Lock input/output port explicitly.
	- Clean up code.

	* src/kahua/util.scm, src/kahua-httpd.scm: